--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,10 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: https://mmistakes.github.io/minimal-mistakes/about/
-  - title: "Sample Posts"
+  - title: "Team"
     url: /year-archive/
-  - title: "Sample Collections"
+  - title: "Work"
     url: /collection-archive/
-  - title: "Sitemap"
+  - title: "Blog"
     url: /sitemap/
