--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
-  - title: "About"
+  - title: "about"
     url: https://mmistakes.github.io/minimal-mistakes/about/
-  - title: "Team"
+  - title: "team"
     url: /year-archive/
-  - title: "Work"
+  - title: "publications"
     url: /collection-archive/
-  - title: "Blog"
+  - title: "blog"
     url: /sitemap/
