--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "contrast" # "default", "air", "aqua", "contrast", "d
 locale                   : "en-US"
 title                    : "MattarLab"
 title_separator          : "|"
-subtitle                 : "Version 0.1" # site tagline that appears below site title in masthead
+subtitle                 : #"Version 0.1" # site tagline that appears below site title in masthead
 name                     : "Marcelo G Mattar"
 description              : "Website of the lab of Marcelo G Mattar"
 url                      : "https://mattarlab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
