--- a/_config.yml
+++ b/_config.yml
@@ -287,8 +287,8 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
-      comments: # true
-      share: true
+      comments: false # true
+      share: false
       related: true
