--- a/_config.yml
+++ b/_config.yml
@@ -287,7 +287,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
       comments: false # true
       share: false
