--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast2" # "default", "air", "aqua", "contrast", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "MattarLab"
+title                    : "mattar lab"
 title_separator          : "|"
 subtitle                 : #"Version 0.1" # site tagline that appears below site title in masthead
 name                     : "Marcelo G Mattar"
@@ -26,7 +26,7 @@ baseurl                  : "/minimal-mistakes" # the subpath of your site, e.g. 
 repository               : "mattarlab/minimal-mistakes" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : ""# overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
