--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,18 @@
 # main links
 main:
-  - title: "about"
-    url: /about/
-  - title: "team"
-    url: /team/
+  - title: "research"
+    url: /research/
   - title: "publications"
     url: /publications/
-  - title: "blog"
-    url: /blog/
+  - title: "about us"
+    url: /about/
+
+
+  # - title: "about"
+  #   url: /about/
+  # - title: "team"
+  #   url: /team/
+  # - title: "publications"
+  #   url: /publications/
+  # - title: "blog"
+  #   url: /blog/
